--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -51,26 +51,25 @@
           <nav class="span2">
             <h3>About</h3>
             <ul>
-              <li><a href="">About Us</a></li>
-              <li><a href="">Contact Us</a></li>
-              <li><a href="">Privacy Policy</a></li>
-              <li><a href="">Legal Notices</a></li>
-            </ul>
+              <li><a href="https://webmaker.org/en-US/events/about/summer_campaign/">About Us</a></li>
+              <li><a href="mailto:joinmozilla@mozilla.org">Contact Us</a></li>
+              <li><a href="https://webmaker.org/en-US/events/legal/privacy-policy/">Privacy Policy</a></li>
+              <li><a href="https://webmaker.org/en-US/events/legal/terms-of-use/">Terms of Use</a></li>
+              <li><a href="http://www.mozilla.org/en-US/about/legal.html">Legal Notices</a></li>
+            <ul>
           </nav>
           <nav class="span2">
             <h3>Connect with us</h3>
             <ul>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
+              <li><a href="http://twitter.com/mozilla/">Twitter</a></li>
+              <li><a href="https://www.facebook.com/mozilla/">Facebook</a></li>
             </ul>
           </nav>
 
           <nav class="span2">
             <h3>Make something!</h3>
             <ul>
-              <li><a href="">Projects</a></li>
-              <li><a href="">Tools</a></li>
-              <li><a href="">Events</a></li>
+              <li><a href="https://webmaker.org/en-US/events/">Events</a></li>
             </ul>
           </nav>
         </div>
