Adding/updating projects from list on wiki, but removing web arcade banner for now because I'm not sure which ones that applies to

--- a/webpagemaker/website/templates/website/webarcade.html
+++ b/webpagemaker/website/templates/website/webarcade.html
@@ -1,5 +1,10 @@
 {% extends "website/layout.html" %}
 {% block head %}
+<style>
+  #webarcade .divider {
+    border-bottom: 4px dashed #4098D5;
+  }
+</style>
 {% endblock %}
 {% block page_id %}webarcade{% endblock %}
 {% block body %}
