Fixed URLs to dropbox projects on projects page.

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -34,7 +34,7 @@
 
     <ul class="projects show-list">
       {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/meme",
+           href        = url('edit_dev_dropbox_project', 'meme'),
            img         = "https://wiki.mozilla.org/images/7/70/Internetfamous.jpg",
            img_alt     = "",
            author      = "Mozilla",
@@ -44,7 +44,7 @@
          ) 
       }}
 	    {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/map",
+           href        = url('edit_dev_dropbox_project', 'map'),
            img         = "https://wiki.mozilla.org/images/8/88/Arcademap.jpg",
            img_alt     = "",
            author      = "Mozilla",
@@ -54,7 +54,7 @@
          ) 
       }}
 	    {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/stuck",
+           href        = url('edit_dev_dropbox_project', 'stuck'),
            img         = "https://wiki.mozilla.org/images/8/89/Stuck90s.png",
            img_alt     = "",
            author      = "Mozilla",
@@ -64,7 +64,7 @@
          ) 
       }}
  	    {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/webstructable",
+           href        = url('edit_dev_dropbox_project', 'webstructable'),
            img         = "https://wiki.mozilla.org/images/5/59/Webstructables.jpg",
            img_alt     = "",
            author      = "Mozilla",
@@ -74,7 +74,7 @@
          ) 
       }}
       {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/soapbox",
+           href        = url('edit_dev_dropbox_project', 'soapbox'),
            img         = "https://wiki.mozilla.org/images/b/be/Soapthumb.png", 
            img_alt     = "",
            author      = "Hive NYC",
