Linked to content guidelines from about page

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -68,7 +68,7 @@
             File a bug or check out our source code to make Thimble better.
           </li>
           <li>
-            Check out our content guidelines.
+            Check out our <a href="{{ url('webpagemaker.website.views.guidelines') }}">content guidelines</a>.
           </li>
         </ul>
       </div>
