Hiding main nav gallery tab (with jinja2 comment) until we have actual content for the gallery

--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -29,7 +29,7 @@
               <ul>
                 <li class="home"><a href="{{ url('webpagemaker.website.views.home') }}">Home</a></li>
                 <li class="projects"><a href="{{ url('webpagemaker.website.views.projects') }}">Projects</a></li>
-                <li class="gallery"><a href="{{ url('webpagemaker.website.views.gallery') }}">Gallery</a></li>
+                {#<li class="gallery"><a href="{{ url('webpagemaker.website.views.gallery') }}">Gallery</a></li>#}
                 <li class="about"><a href="{{ url('webpagemaker.website.views.about') }}">About</a></li>
               </ul>
             </nav>
