Made text blocks narrower on the about page and tweaked some CSS

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -3,18 +3,20 @@
 {% endblock %}
 {% block page_id %}about{% endblock %}
 {% block body %}
-  <div class="container">
+  <div class="container divider">
     <div class="row">
-      <div class="hero-unit span10 divider">
-        <h1>About</h1>
+      <div class="hero-unit span7">
+        <h1 class="large">About</h1>
         <p>
           Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh? <a href="/editor">Try it out now.</a>
         </p>
       </div>
     </div>
+  </div>
 
+  <div class="container divider">
     <div class="row">
-      <div class="span10 divider">
+      <div class="span7">
         <h2>
           Write and edit HTML and CSS right in your browser.
         </h2>
@@ -23,37 +25,43 @@
         </p>
       </div>
     </div>
+  </div>
 
+  <div class="container divider">
     <div class="row">
-      <div class="span10 divider">
+      <div class="span7">
         <h2>
           Share fully functional web pages with one click.
         </h2>
         <p>
-       Thimble isn't just a learning tool or toy. It lets you create your own real, fully functional web pages -- for your band, your pet rock, your business, or whatever -- and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly. 
+       Thimble isn't just a learning tool or toy. It lets you create your own real, fully functional web pages&mdash;for your band, your pet rock, your business, or whatever&mdash;and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly. 
         </p>
       </div>
     </div>
+  </div>
 
+  <div class="container divider">
     <div class="row">
-      <div class="span10 divider">
+      <div class="span7">
         <h2>
         Webmaking made easy.
         </h2>
         <p>
-        Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult -- with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Thimble clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
+        Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult&mdash;with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Thimble clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
         </p>
       </div>
     </div>
+  </div>
 
+  <div class="container divider-last">
     <div class="row">
-      <div class="span10 divider">
+      <div class="span7">
         <h2>
         Get involved
         </h2>
         <ul>
           <li>
-            Don't just sit there -- make something! Try it out now.
+            Don't just sit there&mdash;make something! <a href="/editor">Try it out now</a>.
           </li>
           <li>
             Learn more. Check out our handy Thimble starter projects, see what others are making, or check out our F.A.Q.
@@ -62,7 +70,7 @@
             Stay in touch through our mailing list or Twitter
           </li>
           <li>
-            Join our open community calls  to share ideas or get more involved.
+            Join our open community calls to share ideas or get more involved.
           </li>
           <li>
             File a bug or check out our source code to make Thimble better.
@@ -73,6 +81,5 @@
         </ul>
       </div>
     </div>
-     
   </div> 
 {% endblock %}
