Change direct editor links to use url mapping

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -8,7 +8,7 @@
       <div class="hero-unit span7">
         <h1 class="large">About</h1>
         <p>
-          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh? <a href="/editor">Try it out now.</a>
+          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh? <a href="{{ url('webpagemaker.editor.views.default_editor') }}">Try it out now.</a>
         </p>
       </div>
     </div>
@@ -61,7 +61,7 @@
         </h2>
         <ul>
           <li>
-            Don't just sit there&mdash;make something! <a href="/editor">Try it out now</a>.
+            Don't just sit there&mdash;make something! <a href="{{ url('webpagemaker.editor.views.default_editor') }}">Try it out now</a>.
           </li>
           <li>
             Learn more. Check out our handy Thimble starter projects, see what others are making, or check out our F.A.Q.
