Linked to FAQ from about page.

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -71,7 +71,7 @@
             Learn more. Check out our handy Thimble 
             <a href="{{ url('webpagemaker.website.views.projects') }}">starter projects</a>, 
             {#see what <a href="{{ url('webpagemaker.website.views.gallery') }}">others are making</a>,#} 
-            or check out our F.A.Q.
+            or check out our <a href="https://wiki.mozilla.org/Thimble/FAQ">F.A.Q.</a>
           </li>
           <li>
             Stay in touch through our <a href="https://groups.google.com/group/mozwebpagemaker">mailing list</a> 
