--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -25,6 +25,7 @@
         </p>
       </div>
     </div>
+    <a href="#" class="top">Return to top</a>
   </div>
 
   <div class="container divider">
@@ -38,6 +39,7 @@
         </p>
       </div>
     </div>
+    <a href="#" class="top">Return to top</a>
   </div>
 
   <div class="container divider">
@@ -51,6 +53,7 @@
         </p>
       </div>
     </div>
+    <a href="#" class="top">Return to top</a>
   </div>
 
   <div class="container divider-last">
