--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -10,7 +10,8 @@
           <h2>Thimble App</h2>
           <h1>Projects</h1>
         </hgroup>
-        <p>Steamed, blue mountain ristretto java, trifecta cup eu at and mug shop. Cultivar, crema, medium shop variety iced to go arabica instant mazagran black. Crema at arabica, extraction bar affogato cappuccino brewed. Crema latte extra mocha to go, roast aftertaste percolator siphon so roast.</p>
+        <p>Here are some example projects made in Thimble that we thought were
+      awesome!  Check them out, or choose 'Remix' to make them your own.</p>
       </div>
     </div>
   </div>
