CSS tweaks to fix #172: the home page layout doesn't fail gracefully w/ narrow windows

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -103,6 +103,8 @@ Layout styles
     background-color: #F3EFE6;
     background-image: url("/media/img/mozorg-gradient.png");
     padding-bottom: 0;
+    display: table;
+    width: 100%;
   }
 
   #tabzilla-panel {
