--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -39,7 +39,7 @@
            url         = url('edit_dev_dropbox_project', 'wrangler'),
            img         = "https://wiki.mozilla.org/images/1/1a/HTML_BASIC_coverimage-01.png",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
 	    {{ project(
@@ -49,7 +49,7 @@
            url         = url('edit_dev_dropbox_project', 'map'),
            img         = "https://wiki.mozilla.org/images/8/88/Arcademap.jpg",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
       {{ project(
@@ -59,7 +59,7 @@
            url         = url('edit_dev_dropbox_project', 'bakery'),
            img         = "https://wiki.mozilla.org/images/e/ee/Bakerybash_cover-01.png",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
 	    {{ project(
@@ -69,7 +69,7 @@
            url         = url('edit_dev_dropbox_project', 'avataromatic'),
            img         = "https://wiki.mozilla.org/images/7/78/Avataromatic.png",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
 	    {{ project(
@@ -79,7 +79,7 @@
            url         = url('edit_dev_dropbox_project', 'meme'),
            img         = "https://wiki.mozilla.org/images/d/d3/Coverimages_squirrel-01.png",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
 	    {{ project(
@@ -89,7 +89,7 @@
            url         = url('edit_dev_dropbox_project', 'stuck'),
            img         = "https://wiki.mozilla.org/images/8/89/Stuck90s.png",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
  	    {{ project(
@@ -99,7 +99,7 @@
            url         = url('edit_dev_dropbox_project', 'webstructable'),
            img         = "https://wiki.mozilla.org/images/5/59/Webstructables.jpg",
            img_alt     = "",
-           webarcade   = false
+           webarcade   = true
          ) 
       }}
       {{ project(
