--- a/webpagemaker/website/templates/website/webarcade.html
+++ b/webpagemaker/website/templates/website/webarcade.html
@@ -1,10 +1,5 @@
 {% extends "website/layout.html" %}
 {% block head %}
-<style>
-  #webarcade .divider {
-    border-bottom: 4px dashed #4098D5;
-  }
-</style>
 {% endblock %}
 {% block page_id %}webarcade{% endblock %}
 {% block body %}
@@ -28,39 +23,66 @@
 
     <ul class="projects show-thumbs">
       {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/meme",
-           img         = "https://wiki.mozilla.org/images/7/70/Internetfamous.jpg",
-           img_alt     = "",
+           title       = "Wrangle the HTML",
+           description = "HTML is not complicated or difficult to wrangle. In this project you will get a hold of the basics and you might even realize that you know a bit of HTML already.",
            author      = "Mozilla",
-           title       = "Make Your Own Meme",
-           description = "Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page -- featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine.",
+           url         = url('edit_dev_dropbox_project', 'wrangler'),
+           img         = "https://wiki.mozilla.org/images/1/1a/HTML_BASIC_coverimage-01.png",
+           img_alt     = "",
          ) 
       }}
 	    {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/map",
+           title       = "Hack a Map",
+           description = "HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code>. In this project you will begin your journey in the world of HTML by exploring the syntax behind it to activate and customize a broken map and explore brave new webby worlds.",
+           author      = "Mozilla",
+           url         = url('edit_dev_dropbox_project', 'map'),
            img         = "https://wiki.mozilla.org/images/8/88/Arcademap.jpg",
            img_alt     = "",
+         ) 
+      }}
+      {{ project(
+           title       = "Bakery Bash",
+           description = "If you are a fan of the web you have already met the loaf cat. A proud owner of a Bakery, the loaf cat is throwing a party&mdash;a Bakery Bash if you will. Unfortunately the guests are all undercover Serious Cats. Bummer! Your goal in this game is to fix the links and clickable images so that they no longer point to the serious cat. Once you are done bring a few more guests and add some music to get this party started!",
            author      = "Mozilla",
-           title       = "Hack The Web Arcade",
-           description = "HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>\"quotes like this.\"</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it.Use the comments to navigate your way. Your goal: fix a broken map of the web arcade to unlock new missions and explore brave new webby worlds.",
+           url         = url('edit_dev_dropbox_project', 'bakery'),
+           img         = "https://wiki.mozilla.org/images/e/ee/Bakerybash_cover-01.png",
+           img_alt     = "",
          ) 
       }}
 	    {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/stuck",
+           title       = "Avatar-O-Matic",
+           description = "There are people who are on the web, and then there are people who MAKE the web. Who do YOU want to be? Your goal in this project is to MAKE your very own webmaker avatar. In this unique blend of HTML agility, CSS and firepower you are going to mix and match the images on this page to create your very own webmaker page and share what you are passionate about making. ",
+           author      = "Mozilla",
+           url         = url('edit_dev_dropbox_project', 'avataromatic'),
+           img         = "https://wiki.mozilla.org/images/7/78/Avataromatic.png",
+           img_alt     = "",
+         ) 
+      }}
+	    {{ project(
+           title       = "Make Your Own Meme",
+           description = "Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page&mdash;featuring a meme to conquer all internet memes. You might wonder what is a meme? Well a meme refers to an internet phenomena: think viral videos, web celebs, fuzzy animals… So let your inner squirrel, serious cat, Brony or Ryan Gosling “Hey girl,” shine. ",
+           author      = "Mozilla",
+           url         = url('edit_dev_dropbox_project', 'meme'),
+           img         = "https://wiki.mozilla.org/images/d/d3/Coverimages_squirrel-01.png",
+           img_alt     = "",
+         ) 
+      }}
+	    {{ project(
+           title       = "Make ugly '90s pages pretty",
+           description = "Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly&mdash;kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s.",
+           author      = "Mozilla",
+           url         = url('edit_dev_dropbox_project', 'stuck'),
            img         = "https://wiki.mozilla.org/images/8/89/Stuck90s.png",
            img_alt     = "",
-           author      = "Mozilla",
-           title       = "Make ugly '90s webpages pretty",
-           description = "Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly -- kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s.",
          ) 
       }}
  	    {{ project(
-           href        = "editor?p=/en-US/projects/dropbox/webstructable",
+           title       = "Make your own “webstructable how-to”",
+           description = "This project lets you create your own web page tutorial. Use your new-found HTML, CSS and Popcorn wisdom to create the world's greatest how-to. What do you want to make today?",
+           author      = "Mozilla",
+           url         = url('edit_dev_dropbox_project', 'webstructable'),
            img         = "https://wiki.mozilla.org/images/5/59/Webstructables.jpg",
            img_alt     = "",
-           author      = "Mozilla",
-           title       = "Make your own \"webstructable\" how-to",
-           description = "This project lets you create your own web page tutorial. Use your new-found HTML, CSS and Popcorn wisdom to create the world's greatest how-to. What do you want to make today?",
          ) 
       }}
     </ul>
@@ -70,7 +92,7 @@
 {% block scripts %}
 <script src="/media/js/projects.js"></script>
 {% endblock %}
-{% macro project(href, img, img_alt, author, title, description) -%}
+{% macro project(title, description, author, url, img, img_alt) -%}
   <li class="project">
     <div class="thumb">
         <a href="{{ href }}">
@@ -83,7 +105,7 @@
     <div class="info">
       <h3 class="title">{{ title }}</h3>
       <p class="description">{{ description|safe }}</p>
-      <p><a href="{{ href }}" class="button-blue">Make Project</a>
+      <p><a href="{{ url }}" class="button-blue">Make Project</a>
     </div>
   </li>
 {%- endmacro %}
