Changed projects page top copy

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -10,8 +10,10 @@
           <h2>Thimble App</h2>
           <h1>Projects</h1>
         </hgroup>
-        <p>Here are some example projects made in Thimble that we thought were
-      awesome!  Check them out, or choose 'Remix' to make them your own.</p>
+        <p>
+          Get your feet wet with Thimble by trying some of our fun projects. 
+          Click 'Make project' to get started.
+        </p>
       </div>
     </div>
   </div>
