--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -346,6 +346,15 @@ Home styles
     margin-bottom: 0;
   }
 
+  .thumbnail img {
+    width: 240px;
+    height: 147px;
+    border: 6px solid white;
+    -webkit-box-shadow: 0px 2px 2px 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 2px 2px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 2px 3px rgba(0, 0, 0, 0.1);
+  }
+
 /*
 Home styles
 ================================
