--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -25,41 +25,42 @@
     <h2>Featured Projects</h2>
     
     <ul class="thumbnails">
-      <li class="span3 threeColumn">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="http://placehold.it/252x175" alt="">
-          </a>
-          <div class="caption">
-            <p>Make a meme</p>
-            <h5 class="title">with Internet Famous</h5>
-          </div>
-        </div>
-      </li>
-      
-      <li class="span3 threeColumn">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="http://placehold.it/252x175" alt="">
-          </a>
-          <div class="caption">
-            <p>Hack a HTML theme</p>
-            <h5 class="title">with How To Make A Tumblr Theme</h5>
-          </div>
-        </div>
-      </li>
-      
-      <li class="span3 threeColumn">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="http://placehold.it/252x175" alt="">
-          </a>
-          <div class="caption">
-            <p>Level up your HTML skills</p>
-            <h5 class="title">at the Web Arcade</h5>
-          </div>
-        </div>
-      </li>
+      {{ project(
+           blurb        = "Concoct a crazy creature",
+           title_phrase = "with the Awesome Animal Builder",
+           url          = "projects/nesta/zoo",
+           img          = "https://wiki.mozilla.org/images/7/7b/Animalbuilder.jpg",
+         ) 
+      }}
+
+      {{ project(
+           blurb        = "Level up your HTML skills",
+           title_phrase = "at the Web Arcade",
+           url          = url('webpagemaker.website.views.webarcade'),
+           img          = "https://wiki.mozilla.org/images/e/e3/Webarcade.jpg",
+         ) 
+      }}
+
+      {{ project(
+           blurb        = "Shout it out",
+           title_phrase = "with Make your own rant page",
+           url          = url('edit_dev_dropbox_project', 'soapbox'),
+           img          = "https://wiki.mozilla.org/images/b/be/Soapthumb.png", 
+         ) 
+      }}
     </ul>
   </div> 
 {% endblock %}
+{% macro project(blurb, title_phrase, url, img) -%}
+  <li class="span3 threeColumn">
+    <div class="thumbnail">
+      <a href="{{ url }}">
+        <img src="{{ img }}" alt="{{ title }}">
+      </a>
+      <div class="caption">
+        <p>{{ blurb }}</p>
+        <h5 class="title"><a href="{{ url }}">{{ title_phrase }}</a></h5>
+      </div>
+    </div>
+  </li>
+{%- endmacro %}
