Made project thumb view panels all the same height so float works correctly (closes #195)

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -502,6 +502,8 @@ Projects styles
 
   .projects.show-thumbs .project {
     width: 252px; /* span3 */
+    height: 356px; 
+    overflow: hidden;
     float: left;
     margin-left: 47px;
   }
