--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -122,6 +122,13 @@ Layout styles
     width: 100%;
   }
 
+  #test-ribbon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+
   #tabzilla-panel {
     z-index: 2;
   }
