Bringing wikimo hotlinked images in as static assets.

--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -29,15 +29,7 @@
            blurb        = "Concoct a crazy creature",
            title_phrase = "with the Awesome Animal Builder",
            url          = "projects/nesta/zoo",
-           img          = "https://wiki.mozilla.org/images/7/7b/Animalbuilder.jpg",
-         ) 
-      }}
-
-      {{ project(
-           blurb        = "Level up your HTML skills",
-           title_phrase = "at the Web Arcade",
-           url          = url('webpagemaker.website.views.webarcade'),
-           img          = "https://wiki.mozilla.org/images/e/e3/Webarcade.jpg",
+           img          = "/media/img/projects/Animalbuilder.jpg",
          ) 
       }}
 
@@ -45,7 +37,15 @@
            blurb        = "Shout it out",
            title_phrase = "with Make your own rant page",
            url          = url('edit_dev_dropbox_project', 'soapbox'),
-           img          = "https://wiki.mozilla.org/images/b/be/Soapthumb.png", 
+           img          = "/media/img/projects/soapbox.png", 
+         ) 
+      }}
+
+      {{ project(
+           blurb        = "Level up your HTML skills",
+           title_phrase = "at the Web Arcade",
+           url          = url('webpagemaker.website.views.webarcade'),
+           img          = "/media/img/projects/Webarcade.png",
          ) 
       }}
     </ul>
