--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -115,8 +115,7 @@ Layout styles
   }
 
   #wrapper {
-    background-color: #F3EFE6;
-    background-image: url("/media/img/mozorg-gradient.png");
+    background: #FCF7ED url("/media/img/mozorg-gradient.png") repeat-x 0 0;
     padding-bottom: 0;
     display: table;
     width: 100%;
