Sizing down page header text from 72 to 65px

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -104,6 +104,11 @@ Global styles and classes
     content: "⇧ ";
   }
 
+  .large, 
+  .large h1 {
+    font-size: 65px;
+  }
+
 /*
 Global styles and classes
 ================================
