Made the 'Get started' button slightly more prominent

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -73,6 +73,12 @@ Global styles and classes
   .button-blue:after {
     content: " ❯";
   }
+
+  .button.start,
+  .button-blue.start {
+    font-size: 1.4em;
+    font-family: OpenSansLightItalic; 
+  }
   
   h2 {
     font-family: OpenSansLightItalic;
