--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -13,7 +13,7 @@
         <p>
         Mozilla Thimble App makes it ridiculously simple to create your own web pages. Write and edit HTML and CSS right in your browser. Instantly preview your work. Then host and share your finished pages with a single click. Easy, huh?
         </p>
-        <p><a class="button-blue" href="{{ url('webpagemaker.editor.views.default_editor') }}">Get started</a></p>
+        <p><a class="button-blue start" href="{{ url('webpagemaker.editor.views.default_editor') }}">Get started</a></p>
       </div>
       <div class="pat span4">
         <div class="pat-hands"></div>
