--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="span10">
             <div class="logo">
-              <a href=".">
+              <a href="{{ url('webpagemaker.website.views.home') }}">
                 <img src="/media/img/header_logo.png">
               </a>
             </div>
