Changed twitter link from #MozThimble search to @MozThimble user

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -75,7 +75,7 @@
           </li>
           <li>
             Stay in touch through our <a href="https://groups.google.com/group/mozwebpagemaker">mailing list</a> 
-            or <a href="https://twitter.com/#!/search/realtime/%23mozthimble">Twitter</a>.
+            or <a href="https://twitter.com/#!/MozThimble">Twitter</a>.
           </li>
           <li>
             <a href="https://github.com/mozilla/webpagemaker/issues">File a bug</a> or check out our 
