Swapping non-Windows-friendly unicode ❯ for ▸

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -71,7 +71,7 @@ Global styles and classes
 
   .button:after,
   .button-blue:after {
-    content: " ❯";
+    content: " ▸";
   }
 
   .button.start,
