--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="/media/css/sandstone.css">
   <link rel="stylesheet" href="/media/css/wpm.css">
   <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet">
+  <!--[if lt IE 9]>
+    <script src="/media/js/html5shiv.js"></script>
+  <![endif]-->
   {% block head %} {% endblock %}
 </head>
 <body id="{% block page_id %}{% endblock %}">
